--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,3 @@
-h1 {
-  color: blueviolet;
-}
-
-.navbar {
-  background-color: rgb(10, 197, 172);
-}
-
 .flex {
   background-color: rgb(10, 197, 172);
   display: flex;
@@ -21,4 +13,72 @@ h1 {
 .flex .footer_text {
   color: white;
   margin-left: 2rem;
+}
+
+h1 {
+  color: rgb(12, 94, 76);
+}
+
+.navbar {
+  background-color: rgb(10, 197, 172);
+  color: white;
+}
+
+/*PRODUCTOS*/
+.container {
+  display: flex;
+  flex-direction: row;
+}
+.container .card {
+  background-color: white;
+  display: flex;
+  margin: 2rem;
+  max-width: 100px;
+  padding: 1rem;
+  box-shadow: 0 10px 20px 0 black;
+  justify-content: center;
+}
+
+.animate__animaited {
+  margin: 1rem;
+  --animation-duration: 5s;
+  color: rgb(81, 11, 172);
+  background: linear-gradient(90deg, rgb(249, 242, 18) 0%, rgb(41, 214, 133) 50%, rgb(131, 58, 180) 100%);
+}
+
+/* NOSOTROS */
+.card-body .card-title {
+  text-align: center;
+  color: rgb(10, 197, 172);
+}
+.card-body .card-text {
+  color: #476098;
+  display: flex;
+  flex-direction: column;
+  background-color: beige;
+  margin: 2rem;
+  max-width: 100%;
+  padding: 2rem;
+  box-shadow: 0 10px 20px 0 black;
+}
+
+/*CONTACTO*/
+.formulario {
+  padding: 1rem;
+  background: radial-gradient(circle, rgb(30, 201, 107) 0%, rgb(148, 187, 233) 100%);
+  color: rgb(102, 23, 175);
+}
+.formulario .titulo__form {
+  color: white;
+  text-align: center;
+  margin: 2rem;
+  font-size: 110%;
+  font-family: "Lucida Sans", sans-serif;
+  background: #ca4246;
+  background-color: #ca4246;
+  background: conic-gradient(#ca4246 16.666%, #e16541 16.666%, #e16541 33.333%, #f18f43 33.333%, #f18f43 50%, #8b9862 50%, #8b9862 66.666%, #476098 66.666%, #476098 83.333%, #a7489b 83.333%);
+}
+.formulario .parrafo_form {
+  margin: 1rem;
+  font-size: 120%;
 }/*# sourceMappingURL=style.css.map */
