--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,6 @@
 @import "variables";
 @import "footer";
-
-h1 {
-  color: rgb(12, 94, 76);
-}
+@import "globals";
 
 .navbar {
   background-color: $primary-color;
@@ -17,7 +14,7 @@ h1 {
   .card {
     background-color: white;
     display: flex;
-    margin: 2rem;
+    margin: 1rem;
     max-width: 100px;
     padding: 1rem;
     box-shadow: 0 10px 20px 0 black;
@@ -25,7 +22,7 @@ h1 {
   }
 }
 
-h1 h2 h3 h4 h5 {
+h1 h2 h3 h4 .card-title {
   @include animate-animated;
 }
 
@@ -40,9 +37,9 @@ h1 h2 h3 h4 h5 {
     display: flex;
     flex-direction: column;
     background-color: beige;
-    margin: 2rem;
+    margin: 1rem;
     max-width: 100%;
-    padding: 2rem;
+    padding: 1rem;
     box-shadow: 0 10px 20px 0 black;
   }
 }
@@ -51,11 +48,7 @@ h1 h2 h3 h4 h5 {
 
 .formulario {
   padding: 1rem;
-  background: radial-gradient(
-    circle,
-    rgba(30, 201, 107, 1) 0%,
-    rgba(148, 187, 233, 1) 100%
-  );
+  background: radial-gradient(circle, rgba(30, 201, 107, 1) 0%, rgba(148, 187, 233, 1) 100%);
   color: rgb(102, 23, 175);
   .titulo__form {
     color: white;
