--- a/css/style.css
+++ b/css/style.css
@@ -15,31 +15,46 @@
   margin-left: 2rem;
 }
 
-h1 {
-  color: rgb(12, 94, 76);
+.images, .card-img-top {
+  max-width: 100%;
+  padding: 1rem;
+  margin: 1rem;
 }
 
 .navbar {
   background-color: rgb(10, 197, 172);
   color: white;
+  font-size: 1.5rem;
+  margin: 1rem;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+.navbar .img_logo {
+  width: 50%;
+}
+
+.container_footer {
+  margin: 2rem;
 }
 
 /*PRODUCTOS*/
 .container {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 .container .card {
   background-color: white;
   display: flex;
-  margin: 2rem;
+  flex-direction: row;
+  margin: 1rem;
   max-width: 100px;
   padding: 1rem;
   box-shadow: 0 10px 20px 0 black;
   justify-content: center;
 }
 
-.animate__animaited {
+/* INDEX */
+.title_index {
   margin: 1rem;
   --animation-duration: 5s;
   color: rgb(81, 11, 172);
@@ -47,18 +62,21 @@ h1 {
 }
 
 /* NOSOTROS */
+.card-body {
+  margin: 1rem;
+  padding: 1rem;
+}
 .card-body .card-title {
   text-align: center;
-  color: rgb(10, 197, 172);
 }
 .card-body .card-text {
   color: #476098;
   display: flex;
   flex-direction: column;
   background-color: beige;
-  margin: 2rem;
+  margin: 1rem;
   max-width: 100%;
-  padding: 2rem;
+  padding: 1rem;
   box-shadow: 0 10px 20px 0 black;
 }
 
@@ -81,4 +99,13 @@ h1 {
 .formulario .parrafo_form {
   margin: 1rem;
   font-size: 120%;
+}
+
+.nosotros_image {
+  display: flex;
+  justify-content: center;
+}
+
+#carouselExampleControls {
+  width: 70%;
 }/*# sourceMappingURL=style.css.map */
