--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,5 @@
 $primary-color: rgb(10, 197, 172);
 $text-color: white;
+$font_family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+
+$box-shadow: 0 10px 20px 0 black;
