--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,17 +1,3 @@
-.flex {
-  background-color: $primary-color;
-  display: flex;
-  flex-direction: row;
-  font-size: 2rem;
-
-  .footer_icon {
-    color: white;
-    display: flex;
-    margin-left: 2rem;
-    padding: 1rem;
-  }
-  .footer_text {
-    color: $text-color;
-    margin-left: 2rem;
-  }
+.container_footer {
+  margin: 2rem;
 }
