--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,5 @@
-.flex {
-  background-color: rgb(10, 197, 172);
-  display: flex;
-  flex-direction: row;
-  font-size: 2rem;
-}
-.flex .footer_icon {
-  color: white;
-  display: flex;
-  margin-left: 2rem;
-  padding: 1rem;
-}
-.flex .footer_text {
-  color: white;
-  margin-left: 2rem;
+.container_footer {
+  margin: 2rem;
 }
 
 .images, .card-img-top {
@@ -21,6 +8,7 @@
   margin: 1rem;
 }
 
+/* Navbar */
 .navbar {
   background-color: rgb(10, 197, 172);
   color: white;
@@ -30,10 +18,6 @@
 }
 .navbar .img_logo {
   width: 50%;
-}
-
-.container_footer {
-  margin: 2rem;
 }
 
 /*PRODUCTOS*/
@@ -59,6 +43,14 @@
   --animation-duration: 5s;
   color: rgb(81, 11, 172);
   background: linear-gradient(90deg, rgb(249, 242, 18) 0%, rgb(41, 214, 133) 50%, rgb(131, 58, 180) 100%);
+}
+
+.rule {
+  border-top: 1px solid black;
+  height: 2px;
+  max-width: 200px;
+  padding: 0;
+  margin: 20px auto 0 auto;
 }
 
 /* NOSOTROS */
