--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -2,12 +2,7 @@
   margin: 1rem;
   --animation-duration: 5s;
   color: rgb(81, 11, 172);
-  background: linear-gradient(
-    90deg,
-    rgba(249, 242, 18, 1) 0%,
-    rgba(41, 214, 133, 1) 50%,
-    rgba(131, 58, 180, 1) 100%
-  );
+  background: linear-gradient(90deg, rgba(249, 242, 18, 1) 0%, rgba(41, 214, 133, 1) 50%, rgba(131, 58, 180, 1) 100%);
 }
 
 @mixin make-contenedor($padding-x: $container-padding-x) {
