--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,10 +1,3 @@
-.footer {
-  background-image: url(../images/footer_huellitas.png);
-  background-position: center bottom;
-  background-size: 80%;
-  background-repeat: repeat-x;
-  .footer__p {
-    color: blue;
-    background-color: white;
-  }
+.container-footer {
+  background-image: linear-gradient(43deg, #4158d0 0%, #c850c0 30%, #ffcc70 66%, #ffffff 100%);
 }
