--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,3 +3,5 @@ $text-color: white;
 $font_family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 
 $box-shadow: 0 10px 20px 0 black;
+
+$input-border-color: #2e6292;
