--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,5 @@
-.footer {
-  background-image: url(../images/footer_huellitas.png);
-  background-position: center bottom;
-  background-size: 80%;
-  background-repeat: repeat-x;
-}
-.footer .footer__p {
-  color: blue;
-  background-color: white;
+.container-footer {
+  background-image: linear-gradient(43deg, #4158d0 0%, #c850c0 30%, #ffcc70 66%, #ffffff 100%);
 }
 
 .images, .card-img-top {
@@ -55,9 +48,11 @@
 .rule {
   border-top: 1px solid black;
   height: 2px;
-  max-width: 200px;
+  max-width: 100px;
   padding: 0;
   margin: 20px auto 0 auto;
+  background-color: #4158d0;
+  background-image: linear-gradient(43deg, #4158d0 0%, #c850c0 30%, #ffcc70 66%, #ffffff 100%);
 }
 
 /* NOSOTROS */
@@ -98,6 +93,11 @@
 .formulario .parrafo_form {
   margin: 1rem;
   font-size: 120%;
+}
+
+input {
+  border-color: #2e6292;
+  border-style: groove;
 }
 
 #carouselExampleControls {
