--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,9 +40,11 @@
 .rule {
   border-top: 1px solid black;
   height: 2px;
-  max-width: 200px;
+  max-width: 100px;
   padding: 0;
   margin: 20px auto 0 auto;
+  background-color: #4158d0;
+  background-image: linear-gradient(43deg, #4158d0 0%, #c850c0 30%, #ffcc70 66%, #ffffff 100%);
 }
 
 /* NOSOTROS */
@@ -84,6 +86,11 @@
     margin: 1rem;
     font-size: 120%;
   }
+}
+
+input {
+  border-color: $input-border-color;
+  border-style: groove;
 }
 
 .card-img-top {
