--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 .container-footer {
+  color: white;
   background-image: linear-gradient(43deg, #4158d0 0%, #c850c0 30%, #ffcc70 66%, #ffffff 100%);
+}
+.container-footer .copyright .link {
+  text-decoration: none;
 }
 
 .images, .card-img-top {
