--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,3 +1,9 @@
 .container-footer {
+  color: $text-color;
   background-image: linear-gradient(43deg, #4158d0 0%, #c850c0 30%, #ffcc70 66%, #ffffff 100%);
+  .copyright {
+    .link {
+      text-decoration: none;
+    }
+  }
 }
